...
    <string name="action_settings">Settings</string>

    <string-array name="drawer_array_State_Login">
        <item>Browse</item>
        <item>Sets I own</item>
        <item>Sets I want</item>
        <item>Logout</item>
        <item>Settings</item>
    </string-array>
    <string-array name="drawer_array_State_Logout">
        <item>Browse</item>
        <item>Login</item>
        <item>Register</item>
...
