<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ma15.brickcollector.BrowseActivity">
    <item android:id="@+id/action_stop" android:title="@string/stop" android:icon="@drawable/ic_action_cancel"
        app:showAsAction="withText|ifRoom" />
</menu>
